small fixes vh -> % homewrap

--- a/_source/_sass/3-layouts/_aside.sass
+++ b/_source/_sass/3-layouts/_aside.sass
@@ -17,7 +17,7 @@ aside
   aside
     .box
       margin-top: 20px
-      height: 200px
+      //height: 200px
       //background-color: $dark-gray
       &:nth-child(2n)
         +omega
