--- a/_source/_sass/3-layouts/_home.sass
+++ b/_source/_sass/3-layouts/_home.sass
@@ -1,6 +1,6 @@
 .home-wrap
   +outer-container(100%)
-  min-height: 100vh
+  min-height: 100%
   position: relative
   padding-bottom: $footer-height
 
